fix(public/css/song.css): fixed 500px with text decoration ellipsis

--- a/public/song.html
+++ b/public/song.html
@@ -2,6 +2,7 @@
 <html lang="en">
 
 <link rel="stylesheet" href="css/song.css">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -10,11 +11,13 @@
 
 <body>
     <div class="song-container">
-        <img id="album-image" src="" alt="">
-        <div>
-            <h2 id="track-name"></h2>
-            <h3 id="artist-name"></h3>
-            <h4 id="album-name"></h4>
+        <div class="song-border">
+            <img class="album-image" src="" alt="">
+            <div class="song-details">
+                <h2 class="track-name"></h2>
+                <h3 class="artist-name"></h3>
+                <h4 class="album-name"></h4>
+            </div>
         </div>
     </div>
 </body>
